--- a/extrinsics.html
+++ b/extrinsics.html
@@ -1,58 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Simple Layout</title>
-  <!-- Import fonts -->
-  <link rel="stylesheet" href="fonts/webfont/opensans.css">
-  <!-- Preload fonts -->
-  <link rel="preload" href="fonts/webfont/OpenSans.woff2" as="font" type="font/woff2" crossorigin="anonymous">
-  <link rel="preload" href="fonts/webfont/OpenSans-Bold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
-  <link rel="preload" href="fonts/webfont/OpenSans-Light.woff2" as="font" type="font/woff2" crossorigin="anonymous">
-  <link rel="preload" href="fonts/webfont/OpenSans-Italic.woff2" as="font" type="font/woff2" crossorigin="anonymous">
-  <!-- Import CSS files -->
-  <link rel="stylesheet" href="style-resets.css">
-  <link rel="stylesheet" href="styles.css">
-  <!-- Preload script -->
-  <link rel="preload" href="script.js" as="script">
-</head>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Simple Layout</title>
+    <!-- Import fonts -->
+    <link rel="stylesheet" href="fonts/webfont/opensans.css">
+    <!-- Preload fonts -->
+    <link rel="preload" href="fonts/webfont/OpenSans.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+    <link rel="preload" href="fonts/webfont/OpenSans-Bold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+    <link rel="preload" href="fonts/webfont/OpenSans-Light.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+    <link rel="preload" href="fonts/webfont/OpenSans-Italic.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+    <link rel="preload" href="fonts/icons/fonts/icomoon.woff" as="font" type="font/woff2" crossorigin="anonymous">
+    <!-- Import CSS files -->
+    <link rel="stylesheet" href="style-resets.css">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="fonts/icons/style.css">
+    <!-- Preload script -->
+    <link rel="preload" href="script.js" as="script">
+  </head>
 
-<body class="scrollable">
-  <header>
-    <div class="header-wrapper pagewidth">
-      <div class="logo">
-        <a href="index.html">Logo</a>
-      </div>
-      <div class="navigation">
-        <nav>
-          <a href="new-multisig.html">New Multisig</a>
-          <a href="multisig-accounts.html">Multisig Accounts</a>
-          <a href="accounts.html">Accounts</a>
-          <a href="address-book.html">Address Book</a>
-          <a class="selected" href="extrinsics.html">Extrinsics</a>
-        </nav>
-      </div>
-      <div class="options">
-        <div class="theme-toggle-wrapper">
-          <button id="theme-toggle" class="theme-toggle" aria-label="Toggle dark/light mode">
-            <span class="toggle-track">
-              <span class="toggle-indicator"></span>
-            </span>
-          </button>
+  <body class="scrollable">
+    <header>
+      <div class="header-wrapper pagewidth">
+        <div class="logo">
+          <a href="index.html">Logo</a>
+        </div>
+        <div class="navigation">
+          <nav>
+            <a href="new-multisig.html"><span class="icon-plus"></span>New Multisig</a>
+            <a href="multisig-accounts.html"><span class="icon-layers"></span>Multisig Accounts</a>
+            <a href="accounts.html"><span class="icon-link"></span>Accounts</a>
+            <a href="address-book.html"><span class="icon-book-open"></span>Address Book</a>
+            <a class="selected" href="extrinsics.html"><span class="icon-activity"></span>Extrinsics</a>
+          </nav>
+        </div>
+        <div class="options">
+          <div class="theme-toggle-wrapper">
+            <button id="theme-toggle" class="theme-toggle" aria-label="Toggle dark/light mode">
+              <span class="toggle-track">
+                <span class="toggle-indicator"></span>
+              </span>
+            </button>
+          </div>
         </div>
       </div>
-    </div>
-  </header>
+    </header>
 
-  <main class="extrinsics-page pagewidth">
-    <div class="content"></div>
-  </main>
+    <main class="extrinsics-page">
+      <div class="page-header">
+        <div class="header-container pagewidth">
+          <h2>Extrinsic</h2>
+          <button class="button-primary">Validator</button>
+          <button class="button-primary">Subnet</button>
+          <button class="button-primary">User</button>
+        </div>
+      </div>
+      <div class="content"></div>
+    </main>
 
-  <footer>
-    <span>Secure Sign | Tenet Labs</span>
-  </footer>
+    <footer>
+      <span>Secure Sign | Tenet Labs</span>
+    </footer>
 
-  <script src="script.js"></script>
-</body>
+    <script src="script.js"></script>
+  </body>
 </html>
