--- a/multisig-accounts.html
+++ b/multisig-accounts.html
@@ -1,148 +1,155 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Simple Layout</title>
-  <!-- Import fonts -->
-  <link rel="stylesheet" href="fonts/webfont/opensans.css">
-  <!-- Preload fonts -->
-  <link rel="preload" href="fonts/webfont/OpenSans.woff2" as="font" type="font/woff2" crossorigin="anonymous">
-  <link rel="preload" href="fonts/webfont/OpenSans-Bold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
-  <link rel="preload" href="fonts/webfont/OpenSans-Light.woff2" as="font" type="font/woff2" crossorigin="anonymous">
-  <link rel="preload" href="fonts/webfont/OpenSans-Italic.woff2" as="font" type="font/woff2" crossorigin="anonymous">
-  <!-- Import CSS files -->
-  <link rel="stylesheet" href="style-resets.css">
-  <link rel="stylesheet" href="styles.css">
-  <!-- Preload script -->
-  <link rel="preload" href="script.js" as="script">
-</head>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Simple Layout</title>
+    <!-- Import fonts -->
+    <link rel="stylesheet" href="fonts/webfont/opensans.css">
+    <!-- Preload fonts -->
+    <link rel="preload" href="fonts/webfont/OpenSans.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+    <link rel="preload" href="fonts/webfont/OpenSans-Bold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+    <link rel="preload" href="fonts/webfont/OpenSans-Light.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+    <link rel="preload" href="fonts/webfont/OpenSans-Italic.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+    <link rel="preload" href="fonts/icons/fonts/icomoon.woff" as="font" type="font/woff2" crossorigin="anonymous">
+    <!-- Import CSS files -->
+    <link rel="stylesheet" href="style-resets.css">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="fonts/icons/style.css">
+    <!-- Preload script -->
+    <link rel="preload" href="script.js" as="script">
+  </head>
 
-<body>
-  <header>
-    <div class="header-wrapper pagewidth">
-      <div class="logo">
-        <a href="index.html">Logo</a>
-      </div>
-      <div class="navigation">
-        <nav>
-          <a href="new-multisig.html">New Multisig</a>
-          <a class="selected" href="multisig-accounts.html">Multisig Accounts</a>
-          <a href="accounts.html">Accounts</a>
-          <a href="address-book.html">Address Book</a>
-          <a href="extrinsics.html">Extrinsics</a>
-        </nav>
-      </div>
-      <div class="options">
-        <div class="theme-toggle-wrapper">
-          <button id="theme-toggle" class="theme-toggle" aria-label="Toggle dark/light mode">
-            <span class="toggle-track">
-              <span class="toggle-indicator"></span>
-            </span>
-          </button>
+  <body>
+    <header>
+      <div class="header-wrapper pagewidth">
+        <div class="logo">
+          <a href="index.html">Logo</a>
+        </div>
+        <div class="navigation">
+          <nav>
+            <a href="new-multisig.html"><span class="icon-plus"></span>New Multisig</a>
+            <a class="selected" href="multisig-accounts.html"><span class="icon-layers"></span>Multisig Accounts</a>
+            <a href="accounts.html"><span class="icon-link"></span>Accounts</a>
+            <a href="address-book.html"><span class="icon-book-open"></span>Address Book</a>
+            <a href="extrinsics.html"><span class="icon-activity"></span>Extrinsics</a>
+          </nav>
+        </div>
+        <div class="options">
+          <div class="theme-toggle-wrapper">
+            <button id="theme-toggle" class="theme-toggle" aria-label="Toggle dark/light mode">
+              <span class="toggle-track">
+                <span class="toggle-indicator"></span>
+              </span>
+            </button>
+          </div>
         </div>
       </div>
-    </div>
-  </header>
+    </header>
 
-  <main class="multisig-accounts-page">
-    <div class="content pagewidth">
-      <div class="side-by-side-container">
-        <div class="side-by-side accounts-list scrollable">
-          <div class="account selected">
-            <h3>Demo Account</h3>
-            <p class="account-address" data-value="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP"></p>
-          </div>
-          <div class="account">
-            <h3>Test Account 1</h3>
-            <p class="account-address" data-value="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP"></p>
-          </div>
-          <div class="account">
-            <h3>Test Account 2</h3>
-            <p class="account-address" data-value="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP"></p>
-          </div>
-          <div class="account">
-            <h3>Test Account 3</h3>
-            <p class="account-address" data-value="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP"></p>
-          </div>
-          <div class="account">
-            <h3>Test Account 4</h3>
-            <p class="account-address" data-value="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP"></p>
-          </div>
-          <div class="account">
-            <h3>Test Account 5</h3>
-            <p class="account-address" data-value="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP"></p>
-          </div>
-          <div class="account">
-            <h3>Test Account 6</h3>
-            <p class="account-address" data-value="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP"></p>
-          </div>
-          <div class="account">
-            <h3>Test Account 7</h3>
-            <p class="account-address" data-value="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP"></p>
-          </div>
-          <div class="account">
-            <h3>Test Account 8</h3>
-            <p class="account-address" data-value="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP"></p>
-          </div>
-          <div class="account">
-            <h3>Test Account 9</h3>
-            <p class="account-address" data-value="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP"></p>
-          </div>
+    <main class="multisig-accounts-page">
+      <div class="page-header">
+        <div class="header-container pagewidth">
+          <h2>Your multisig accounts</h2>
         </div>
-        <div class="side-by-side account-details scrollable">
-          <div class="account-details-wrapper">
-            <div class="account-details-header">
-              <h3>Demo account</h3>
-              <h4>5GHjMgGkydmNStMAK6giDCjHB1h4fHBh9N1N6ejTJ8C3YDqSP</h4>
-              <div class="account-balance">
-                <p>Free: <span>0.0000 C</span></p>
-                <p>Staked: <span>0.0000 C</span></p>
+      </div>
+      <div class="content pagewidth">
+        <div class="side-by-side-container">
+          <div class="side-by-side accounts-list scrollable">
+            <div class="account selected">
+              <h3>Demo Account</h3>
+              <p class="account-address" data-value="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP"></p>
+            </div>
+            <div class="account">
+              <h3>Test Account 1</h3>
+              <p class="account-address" data-value="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP"></p>
+            </div>
+            <div class="account">
+              <h3>Test Account 2</h3>
+              <p class="account-address" data-value="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP"></p>
+            </div>
+            <div class="account">
+              <h3>Test Account 3</h3>
+              <p class="account-address" data-value="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP"></p>
+            </div>
+            <div class="account">
+              <h3>Test Account 4</h3>
+              <p class="account-address" data-value="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP"></p>
+            </div>
+            <div class="account">
+              <h3>Test Account 5</h3>
+              <p class="account-address" data-value="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP"></p>
+            </div>
+            <div class="account">
+              <h3>Test Account 6</h3>
+              <p class="account-address" data-value="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP"></p>
+            </div>
+            <div class="account">
+              <h3>Test Account 7</h3>
+              <p class="account-address" data-value="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP"></p>
+            </div>
+            <div class="account">
+              <h3>Test Account 8</h3>
+              <p class="account-address" data-value="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP"></p>
+            </div>
+            <div class="account">
+              <h3>Test Account 9</h3>
+              <p class="account-address" data-value="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP"></p>
+            </div>
+          </div>
+          <div class="side-by-side account-details scrollable">
+            <div class="account-details-wrapper">
+              <div class="account-details-header">
+                <h3>Demo account</h3>
+                <h4>5GHjMgGkydmNStMAK6giDCjHB1h4fHBh9N1N6ejTJ8C3YDqSP</h4>
+                <div class="account-balance">
+                  <p>Free: <span>0.0000 C</span></p>
+                  <p>Staked: <span>0.0000 C</span></p>
+                </div>
+                <button class="button">Send</button> <button class="button">Edit</button> <button class="button">Add proxy</button>
               </div>
-              <button class="button">Send</button> <button class="button">Edit</button> <button class="button">Add proxy</button>
-            </div>
-            <div class="account-details-content">
-              <h4>Account Details</h4>
-              <p>Threshold: <span>2/2</span></p>
-              <p>Signatories:</p>
-              <ul>
-                <li title="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP">Test account1</li>
-                <li title="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP">Test account2</li>
-                <li title="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP">Test account3</li>
-                <li title="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP">Test account4</li>
-                <li title="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP">Test account5</li>
-                <li title="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP">Test account6</li>
-                <li title="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP">Test account7</li>
-                <li title="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP">Test account8</li>
-                <li title="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP">Test account9</li>
-                <li title="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP">Test account10</li>
-                <li title="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP">Test account11</li>
-                <li title="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP">Test account12</li>
-                <li title="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP">Test account13</li>
-                <li title="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP">Test account14</li>
-                <li title="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP">Test account15</li>
-                <li title="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP">Test account16</li>
-                <li title="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP">Test account17</li>
-                <li title="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP">Test account18</li>
-                <li title="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP">Test account19</li>
-                <li title="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP">Test account20</li>
-                <li title="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP">Test account21</li>
-                <li title="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP">Test account22</li>
-              </ul>
-            </div>
-            <div class="account-details-approvals">
-              <h4>Pending Approvals</h4>
+              <div class="account-details-content">
+                <h4>Account Details</h4>
+                <p>Threshold: <span>2/2</span></p>
+                <p>Signatories:</p>
+                <ul>
+                  <li title="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP">Test account1</li>
+                  <li title="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP">Test account2</li>
+                  <li title="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP">Test account3</li>
+                  <li title="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP">Test account4</li>
+                  <li title="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP">Test account5</li>
+                  <li title="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP">Test account6</li>
+                  <li title="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP">Test account7</li>
+                  <li title="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP">Test account8</li>
+                  <li title="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP">Test account9</li>
+                  <li title="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP">Test account10</li>
+                  <li title="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP">Test account11</li>
+                  <li title="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP">Test account12</li>
+                  <li title="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP">Test account13</li>
+                  <li title="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP">Test account14</li>
+                  <li title="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP">Test account15</li>
+                  <li title="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP">Test account16</li>
+                  <li title="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP">Test account17</li>
+                  <li title="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP">Test account18</li>
+                  <li title="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP">Test account19</li>
+                  <li title="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP">Test account20</li>
+                  <li title="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP">Test account21</li>
+                  <li title="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP">Test account22</li>
+                </ul>
+              </div>
+              <div class="account-details-approvals">
+                <h4>Pending Approvals</h4>
+              </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
-  </main>
+    </main>
 
-  <footer>
-    <span>Secure Sign | Tenet Labs</span>
-  </footer>
+    <footer>
+      <span>Secure Sign | Tenet Labs</span>
+    </footer>
 
-  <script src="script.js"></script>
-</body>
+    <script src="script.js"></script>
+  </body>
 </html>
